--- a/src/main/resources/templates/upload/uploadFailure.html
+++ b/src/main/resources/templates/upload/uploadFailure.html
@@ -10,7 +10,9 @@
 		
 	<div layout:fragment="content">
 		
-	OK!
+		<div class="container container-1">
+			<p class="alert alert-warning" role="alert">Upload failed, please upload a .csv file and try again.</p>
+		</div>
 		
 	</div>
 		
