--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 		
-	<div layout:fragment="content">
+	<div layout:fragment="content" class="container container-1">
 		
 		
 		<form name="f" th:action="@{/login}" method="post" class="form-signin">
