--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -6,18 +6,21 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Blog Main Layout</title>
+	<title>IDES Canada</title>
 	
-	<link rel="stylesheet" href="../static/css/blog.css" th:href="@{/css/blog.css}"/>
+	<script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2.1.25/daterangepicker.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-filestyle/1.2.1/bootstrap-filestyle.js"></script>
+
+	<link rel="stylesheet" href="../static/css/blog.css" th:href="@{/css/ides.css}"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-		
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />	
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css' />
-	
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2.1.25/daterangepicker.css" />
+
 </head>
 <body>
 
@@ -26,48 +29,24 @@
 		<nav class="navbar navbar-default">
 		    <div class="container-fluid">
 		        <div class="navbar-header">
-		            <a class="navbar-brand" href="/">My Blog</a>
+		            <a class="navbar-brand">Julian Saavedra</a>
 		        </div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				    <ul class="nav navbar-nav">
-				        <li th:class="${controllerName == 'Home'} ? 'active'"><a href="/">Home</a></li>
-				        <li class="dropdown" th:class="${controllerName == 'Post'} ? 'dropdown active' : 'dropdown'">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Posts <span class="caret"></span></a>
-				            <ul class="dropdown-menu">
-				                <li><a href="/posts/list">List</a></li>
-				            </ul>
-				        </li>
-				        <li class="dropdown" th:class="${controllerName == 'Author'} ? 'dropdown active' : 'dropdown'">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Authors <span class="caret"></span></a>
-				            <ul class="dropdown-menu">
-				                <li><a href="/authors/list">List</a></li>
-				            </ul>
-				        </li>
-						<li class="dropdown" th:class="${controllerName.startsWith('Admin')} ? 'dropdown active' : 'dropdown'" sec:authorize="hasRole('ROLE_ADMIN')">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
-				            <ul class="dropdown-menu">
-				                <li><a href="/admin/posts/">Posts</a></li>
-				                <li><a href="/admin/authors/">Authors</a></li>				                
-				            </ul>
-				        </li>					        
+				        <li th:class="${controllerName == 'Upload'} ? 'active'"><a href="/upload/">Upload .CSV File</a></li>	
+				        <li th:class="${controllerName == 'Data'} ? 'active'"><a href="/data/">Show Data</a></li>			
+				         <li th:class="${controllerName == 'Chart'} ? 'active'"><a href="/chart/">Show Chart</a></li>	        
 				    </ul>
-				    <div class="navbar-text navbar-right">
-			            Welcome <span sec:authentication="name">Guest</span> | 
-				    	<form sec:authorize="isAuthenticated()" id="frmlogout" th:action="@{/logout}" method="post" class="form-inline">
-				    		<a href="javascript:{}" onclick="document.getElementById('frmlogout').submit(); return false;">Logout</a>
-				    	</form>
-				    	<a sec:authorize="!isAuthenticated()" th:href="@{/login}"> Login</a>
-				    </div>
+
 				</div>
 		    </div>
 		</nav>
-		
-		<div layout:fragment="content">
-		</div>
-	
-	</div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
+	</div>
+	
+	<div layout:fragment="content"></div>
+
+
+		
 </body>
 </html>
