--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -3,7 +3,7 @@
 <html lang="en"
 	layout:decorator="layouts/main">
 <head>
-	<title>Security Demo - Login</title>
+	<title>SCENTROiD, IDES Canada</title>
 </head>
 <body>
 		
