--- a/src/main/resources/templates/chart/view.html
+++ b/src/main/resources/templates/chart/view.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	layout:decorator="layouts/main">	
 	<head>
-		<title>IDES Canada</title>
+	<title>SCENTROiD, IDES Canada</title>
 		<script type="text/javascript" src="/js/list.js"></script>
 
 	</head>
