--- a/src/main/resources/templates/upload/uploadFailure.html
+++ b/src/main/resources/templates/upload/uploadFailure.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	layout:decorator="layouts/main">	
 <head>
-	<title>IDES Canada</title>
+	<title>SCENTROiD, IDES Canada</title>
 </head>
 <body>
 		
