--- a/src/main/resources/templates/upload/uploadFailure.html
+++ b/src/main/resources/templates/upload/uploadFailure.html
@@ -11,7 +11,7 @@
 	<div layout:fragment="content">
 		
 		<div class="container container-1">
-			<p class="alert alert-warning" role="alert">Upload failed, please upload a .csv file and try again.</p>
+			<p class="alert alert-warning" role="alert">Something went wrong, please upload a proper .csv file and try again.</p>
 		</div>
 		
 	</div>
